:ambulance: fix: fix remove illustrative elements horizontal overflow

--- a/src/main.scss
+++ b/src/main.scss
@@ -17,7 +17,11 @@ body {
   padding: 0;
   color: $textColor;
   background-color: $backgroundColor;
-  overflow-x: hidden;
+}
+
+main {
+    position: relative;
+    overflow-x: hidden;
 }
 
 .main-gradient {
